--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "laue": "^0.2.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "laue": "^0.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-svg-loader": "^0.16.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
