--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bodymovin": "^4.13.0",
     "core-js": "^3.6.4",
     "laue": "^0.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
